--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button id="sharebutton">Share</button>
+    <script src="script.js"></script>
 </body>
 </html>
