--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Christmas Countdown</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="countdown">
+        <h1>Countdown to Christmas</h1>
+        <div id="timer">
+            <span id="days"></span> days 
+            <span id="hours"></span> hours 
+            <span id="minutes"></span> minutes 
+            <span id="seconds"></span> seconds
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
