--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <span id="seconds"></span> seconds
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="timeline.js"></script>    
+    <script src="share.js"></script>    
+
 </body>
 </html>
