--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Holiday Countdown</title>
 </head>
 <body>
-    
+    <h1>Ready for a Holiday?</h1>
+    <h2>
+        <div class="countdown">
+        <div class="time" id="days">
+            <span class="label">Days</span>
+        </div>
+        <div class="time" id="hours">
+            <span class="label">Hours</span>
+        </div>
+        <div class="time" id="minutes">
+            <span class="label">Minutes</span>
+        </div>
+        <div class="time" id="seconds">
+            <span class="label">Seconds</span>
+        </div>
+    </div>
+    </h2>
 </body>
 </html>
