Html and css for share button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     </h2>
+    <button id="shareButton">&#10154;</button>
 
     <script src="timeline.js"></script>
     <script src="share.js"></script>
