HTML AND CSS UPDATED

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          and we'll tell you how many days, hour, minutes, and seconds.</p>
     </header> 
 
-    
+
         <!--Dropdown Menu for Selectiong Holiday-->
         <div class="holiday-selector">
             <lable for="holiday">Choose a holiday:</lable>
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <button id="shareButton">&#10154;</button>
+    <button id="shareButton">SHARE</button>
 
         <script src="timeline.js"></script>
         <script src="share.js"></script>
