--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 
         <!--Dropdown Menu for Selectiong Holiday-->
         <div class="holiday-selector">
-            <lable for="holiday">Choose a holiday:</lable>
-            <select id="holiday">
-                <option value="halloween" Halloween></option>
-            </select>
+            <label for="holiday">Choose a holiday:</label>
+            <input type="date" id="dateInput"> 
             <button id="start-countdown">Start Countdown</button>
         </div>
         <!-- Countdown and Time lable-->
@@ -48,7 +46,8 @@
     </section>
 
     <button id="shareButton">SHARE</button>
-
+    
+        <script src="script.js"></script>
         <script src="timeline.js"></script>
         <script src="share.js"></script>
 
