--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
                 <label for="holiday">Choose a holiday:</label>
               </div>
               <div class="col">
-                <select id="holiday" class="form-control">
-                  <option value="halloween">Halloween</option>
-                </select>
+                    <input type="date" id="dateInput"> 
               </div>
               <div class="col">
                 <button id="start-countdown" class="button">Start Countdown</button>
