fixed the issue of loading in browser

--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
+
     <title>Holiday Countdown</title>
 </head>
 
 <body>
    <header>
-    <h1>Ready for a<br> Holiday?</h1>
+    <h1>Ready for a Holiday?</h1>
+    <p>With our advanced techology, all you have to do is type in a holiday,<br>
+         and we'll tell you how many days, hour, minutes, and seconds.</p>
     </header> 
 
 
         <!--Dropdown Menu for Selectiong Holiday-->
-        <div class="holiday-selector">
+        <div class="holidaySelector">
             <label for="holiday">Choose a holiday:</label>
             <input type="date" id="dateInput"> 
             <button id="start-countdown">Start Countdown</button>
         </div>
-        <p>With our advanced techology, all you have to do is type in a holiday,<br>
-            and we'll tell you how many days, hour, minutes, and seconds.</p>
         <!-- Countdown and Time lable-->
     <section>
         <div class="countdown">
