--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
    <header>
-    <h1>Ready for a Holiday?</h1>
+    <h1>Ready for a <br>Holiday?</h1>
     </header> 
     
     <div class="paragraph"
