css with header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     </header> 
     
     <div class="paragraph"
-    <p>With our advanced techology, all you have to do is type in a holiday,<br>
-        and we'll tell you how many days, hour, minutes, and seconds.</p>
+    <p>Select a date, and click 'Start Countdown' to see the magic happen!</p>
     </div>
 
         <!--Dropdown Menu for Selectiong Holiday-->
