--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div class="col">
                     <input type="date" id="dateInput"> 
               </div>
-              <div class="col">
+              <div class="col-1">
                 <button id="start-countdown" class="button">Start Countdown</button>
               </div>
             </div>
