header font, countdown font, footer addition

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
         <!-- Share button-->
-    <button id="shareButton">SHARE</button>
+    <button id="shareButton">Share</button>
   </div>
 
         <div class="modal" tabindex="-1" role="dialog">
@@ -84,7 +84,7 @@
         <script src="timeline.js"></script>
         <script src="share.js"></script>
 
-
+<footer></footer>
     
 </body>
 </html>
